# utility

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  command.c  file.c  make  meson.build
include/: command.h  file.h  progressbar.h  utility.h
src/: CMakeLists.txt  command.c  file.c  meson.build  progressbar.c  utility.c
subprojects/: unity
test/: CMakeLists.txt  test_file.c  test_utility.c
